<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, DouiActivity!</string>
    <string name="app_name">Tasks</string>
    <string name="todoItemEditBtSave">Save</string>
    <string name="todoItemEditBtCancel">Cancel</string>
    <string name="todoItemViewBtEdit">Edit</string>
    <string name="todoItemViewBtSetDone">Set done</string>
    <string name="todoItemViewBtToList">Move to list</string>
    <string name="todoCategoryEditableRowSave">Save</string>
    <string name="todoCategoryEditableRowAdd">Add category</string>
    <string name="todoCategoriesManagerTitle">Categories</string>
    <string name="new_category_hint">New category</string>
    <string name="item_title_hint">To do</string>
    <string name="item_body_hint">Optional description</string>
    <string name="item_edit_bt_save">Save</string>
    <string name="item_edit_bt_cancel">Cancel</string>
    <string name="helpActivityTitle">Help</string>
    <string name="prefSyncServerUrl_Key">prefSyncServerUrl_Key</string>
    <string name="prefSyncServerUrl_Title">Sync server URL</string>
    <string name="prefSyncServerUrl_Default">http://ec2-54-213-127-94.us-west-2.compute.amazonaws.com</string>
    <string name="todo_main_menu_i_settings">Settings</string>
    <string name="prefSyncRepeatTime_Key">prefSyncRepeatTime_Key</string>
	<string name="prefSyncRepeatTime_Title">Sync every (ms):</string>
	<string name="prefSyncRepeatTime_Default">300</string>
	<string name="prefIsSyncable_Key">prefIsSyncable_Key</string>
	<string name="prefIsSyncable_Title">Sync with GAE?</string>
	<!-- string name="prefIsSyncable_Default">No default string value for checkbox.</string-->
	<string name="prefSyncAccount_Key">prefSyncAccount_Key</string>
	<string name="prefSyncAccount_Title">Select sync account:</string>
	<!-- string name="prefSyncAccount_Default">No default string value for listbox.</string-->
</resources>